crates/tsuno-driver/tests/fixtures/verify_cli/fail/rejects_result_in_req.rs
//@ verify
//@ req "{result} == 1"
//@ ens "true"
fn bad(x: i32) -> i32 {
    x
}

fn main() {}
